# train_ops

./: .gitignore  Cargo.toml  README.md  index.html  styles.css
public/css/: avatar.css  form.css  hud.css  login.css  main.css  map.css  var.css
src/: app.rs  main.rs  routes.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: login_api.rs
src/components/: avatar_comp.rs  game_comp.rs  hud_bott_comp.rs  hud_top_comp.rs  lang_comp.rs  login_comp.rs  map_comp.rs  menu_comp.rs  mod.rs  profil_comp.rs  setting_comp.rs  user_comp.rs
src/enums/: avatar.rs  lang.rs  mod.rs  route.rs  storage_keys.rs
src/services/: canvas.rs  canvas_util.rs  mod.rs  storage.rs  translation.rs
src/states/: app_state.rs  map_state.rs  mod.rs  tile_state.rs
src/stores/: app_store.rs
