[package]
name = "train_ops_ui"
version = "0.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
yew-i18n = "0.1.2"
yewdux = "0.10.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = {version = "0.3.70", features = [
    "CanvasRenderingContext2d", 
    "Document", 
    "Element", 
    "HtmlCanvasElement", 
    "HtmlImageElement",
    "Window", 
    "TouchEvent", 
    "TouchList", 
    "Touch" ]}
js-sys = "0.3.70"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.120"
log = "0.4.6"
gloo-net = "0.6.0"
base64 = "0.22.1"

[workspace]
members = ["src-tauri"]
